--- a/register.html
+++ b/register.html
@@ -79,7 +79,7 @@
 
                 </div>
                 </form>
-                <a href="./login.php" class="text-center">I already have a membership</a>
+                <a href="./login" class="text-center">I already have a membership</a>
             </div>
 
         </div>
